--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "sass": "^1.57.1"
