--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
