--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-display-name": "^7.18.6",
     "@next/font": "13.1.2",
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "logrocket": "^3.0.1",
+    "logrocket-react": "^5.0.1",
     "next": "13.1.2",
     "openai": "^3.1.0",
     "react": "18.2.0",
